--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "e2e": "playwright test"
+    "e2e": "playwright test",
+    "types:generate": "supabase gen types typescript --linked > lib/types/database.ts",
+    "types:generate-local": "supabase gen types typescript --local > lib/types/database.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -40,6 +42,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.35",
+    "supabase": "^1.200.3",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
