--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,8 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "supabase/functions",
+    "playwright.config.ts"
   ]
 }
