--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test": "jest",
     "e2e": "playwright test",
     "types:generate": "supabase gen types typescript --linked > lib/types/database.ts",
-    "types:generate-local": "supabase gen types typescript --local > lib/types/database.ts"
+    "types:generate-local": "supabase gen types typescript --local > lib/types/database.ts",
+    "types:update": "npm run types:generate && npm run typecheck",
+    "types:check": "npm run typecheck",
+    "db:types": "npm run types:generate",
+    "validate": "npm run lint && npm run typecheck",
+    "check": "npm run validate"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
